[tool.poetry]
name = "quesadilla"
version = "0.1.0"
description = "Homogenization procedure according to González-Rouco"
authors = ["Benjamin Gutzmann <gutzemann@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8,<3.12"
pandas = "^1.5.2"


[tool.poetry.group.test.dependencies]
wetterdienst = "^0.49.0"
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
